--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,10 @@ dependencies:
   path_provider: ^2.1.5
   intl: ^0.20.2
   uuid: ^4.5.1
+  dio: ^5.8.0+1
+  url_launcher: ^6.3.1
+  flutter_secure_storage: ^9.2.4
+  uni_links: ^0.5.1
 
 dev_dependencies:
   flutter_test:
