--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,9 @@ dependencies:
   url_launcher: ^6.3.1
   flutter_secure_storage: ^9.2.4
   uni_links: ^0.5.1
+  http: ^1.4.0
+  html: ^0.15.6
+  flutter_html: ^3.0.0
 
 dev_dependencies:
   flutter_test:
